--- a/_posts/2023-10-30-test.md
+++ b/_posts/2023-10-30-test.md
@@ -1,1 +1,10 @@
-##Test Markdown
+---
+layout: post
+title:  "Test Jekyll Markdown!"
+---
+
+# Welcome
+
+**Hello world**, this is my first Jekyll blog post.
+
+I hope you like it!
